some re-formatting - some helpful annotations - css styling for postcontainer

--- a/instagram-app/src/components/PostContainer/postContainer.css
+++ b/instagram-app/src/components/PostContainer/postContainer.css
@@ -14,3 +14,9 @@
       color: black;
       margin-right: 20px;
 }
+
+.postObject {
+      border: 1px solid #d3d3d3;
+      margin: 20px 0;
+      box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+    }
