--- a/instagram-app/src/components/Login/login.css
+++ b/instagram-app/src/components/Login/login.css
@@ -2,6 +2,9 @@
     
 .loginForm{
   width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: sienna;
   background: papayawhip;
   border-radius: 10px;
